# openreview-monitor

./: .gitignore  AGENTS.md  README.md  README_zh.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  server.py
backend/app/routers/: admin.py  papers.py  public.py  subscribers.py
backend/app/services/: email.py  openreview.py  scheduler.py
backend/app/utils/: auth.py  crypto.py  rate_limit.py
docs/: backend_deploy.md  backend_deploy_zh.md  development.md  development_zh.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AdminLogin.tsx  BackendSelector.tsx  LanguageSwitch.tsx  PaperForm.tsx  PaperList.tsx  SeoManager.tsx
frontend/src/lib/: adminToken.ts  api.ts  apiBase.ts  i18n.tsx
frontend/src/pages/: Admin.tsx  Home.tsx
